# lab_inventory

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
lab_SOA_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
part1_monolith/: monolithic_app.py  requirements.txt  test_monolithic.py
part2_SOAP_webservice/: soap_client.py  soap_service.py
part3_RESTful_webservice/: requirements.txt  rest_service.py
venv1/: pyvenv.cfg
venv1/Scripts/: activate  activate.bat
