[project]
name = "lab_SOA_1"
version = "0.1.0"
description = ""
#license = { text = "MIT" }
readme = "readme.md"

dependencies = [
    "PyQt5",
    "sqlalchemy",
    "psycopg2-binary",
    "spyne",
    "lxml",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pytest"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
]

[tool.setuptools]
packages = [
    "part1_monolith",
    "part2_SOAP_webservice", 
    "part3_RESTful_webservice"
]